fix: Grid ColumnMenu / Filter alignment in RTL mode. Closes telerik/kendo-ui-core#2391

--- a/styles/web/kendo.rtl.less
+++ b/styles/web/kendo.rtl.less
@@ -206,8 +206,8 @@
 .k-rtl .k-header > .k-header-column-menu
 {
     float: left;
-    margin-left: -.6em;
-    margin-right: 0;
+    margin: -.5em 0 -.4em -.6em;
+    padding: .5em .2em .4em;
 }
 
 .k-rtl .k-grid-header .k-filterable .k-link
@@ -258,10 +258,11 @@
     border-width: 0;
 }
 
-.k-rtl .k-grid-header .k-with-icon .k-link
+.k-rtl .k-grid-header th.k-with-icon .k-link
 {
-    margin-right: -0.6em;
-    margin-left: 1.3em;
+    margin: -.5em 0 -.4em -.6em;
+    padding: .5em 0 .4em .6em;
+    margin-left: 18px;
 }
 
 .k-rtl .k-filtercell > span
